Fix layout issue with mobile.

--- a/style.scss
+++ b/style.scss
@@ -36,9 +36,6 @@ body {
 
 .blog-banner {
   height: 300px;
-  background-size: cover; 
-  background-repeat: no-repeat;
-  opacity:1.1;
 }
 
 .container {
@@ -171,7 +168,7 @@ img {
 
 .wrapper-masthead {
   //margin-top: 80px;
-  margin-bottom: 50px;
+  //margin-bottom: 50px;
 }
 
 .masthead {
@@ -201,11 +198,10 @@ img {
 }
 
 .site-info {
-  //float: right;
-  width: 50%;
-  position: absolute;
-  top: 18%;
-  right:0;
+  float: left;
+
+
+  margin-bottom: 10px;
 
   @include mobile {
     float: none;
@@ -226,7 +222,7 @@ img {
 
 .site-description {
   margin: -5px 0 0 0;
-  color: white;
+  color:$darkGray;
   font-size: 16px;
   text-transform: uppercase;
   @include mobile {
@@ -254,7 +250,7 @@ nav {
     letter-spacing: 1px;
 
     @include mobile {
-      margin: 0 10px;
+   //   margin: 0 10px;
       color: white;
     }
   }
